--- a/custom-app/Vault/secret.yaml
+++ b/custom-app/Vault/secret.yaml
@@ -4,5 +4,6 @@ metadata:
   name: my-nginx-vault
   annotations:
     avp.kubernetes.io/path: "secret/data/my-nginx"
+#type: Opaque
 stringData:  
   MY_SECRET: <password>
